welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: not found: value vuBiscuit
    if (vuBiscuit==true){
        ^