welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var biscuit=0
  for(compteur<-1 to 5){
    avance()
    if (vuBiscuit==true){
    	biscuit=biscuit+1  
    }
  }
  for(compteur<-1 to 5){
  	recule()
  }
  
  if (biscuit ==0){
    return false
  }else {
    return true
  }
}
  